--- a/MakeMyTrip/test-output/old/Default suite/methods-alphabetical.html
+++ b/MakeMyTrip/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="66f1f5">  <td>22/01/25 21:10:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTC.blankLogin()[pri:1, instance:TestSuite.LoginPageTC@6da21078]">blankLogin</td> 
-  <td>main@2108763062</td>   <td></td> </tr>
-<tr bgcolor="66f1f5">  <td>22/01/25 21:09:54</td>   <td>-20151</td> <td title="&gt;&gt;LoginPageTC.launchBrowser()[pri:0, instance:TestSuite.LoginPageTC@6da21078]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2108763062</td>   <td></td> </tr>
-<tr bgcolor="66f1f5">  <td>22/01/25 21:10:16</td>   <td>2174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTC.loginTest()[pri:2, instance:TestSuite.LoginPageTC@6da21078]">loginTest</td> 
-  <td>main@2108763062</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>22/01/25 21:10:37</td>   <td>22320</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseUtilities.tearDown()[pri:0, instance:TestSuite.LoginPageTC@6da21078]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2108763062</td>   <td></td> </tr>
+<tr bgcolor="c971a1">  <td>22/01/26 18:38:05</td>   <td>0</td> <td title="&gt;&gt;LoginPageTC.launchBrowser()[pri:0, instance:TestSuite.LoginPageTC@47987356]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@517355658</td>   <td></td> </tr>
+<tr bgcolor="c971a1">  <td>22/01/26 18:38:27</td>   <td>22333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTC.loginTest()[pri:2, instance:TestSuite.LoginPageTC@47987356]">loginTest</td> 
+  <td>main@517355658</td>   <td></td> </tr>
+<tr bgcolor="b0c791">  <td>22/01/26 18:38:50</td>   <td>44586</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseUtilities.tearDown()[pri:0, instance:TestSuite.LoginPageTC@47987356]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@517355658</td>   <td></td> </tr>
 </table>
