--- a/MakeMyTrip/test-output/old/Default suite/methods-alphabetical.html
+++ b/MakeMyTrip/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c971a1">  <td>22/01/26 18:38:05</td>   <td>0</td> <td title="&gt;&gt;LoginPageTC.launchBrowser()[pri:0, instance:TestSuite.LoginPageTC@47987356]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@517355658</td>   <td></td> </tr>
-<tr bgcolor="c971a1">  <td>22/01/26 18:38:27</td>   <td>22333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTC.loginTest()[pri:2, instance:TestSuite.LoginPageTC@47987356]">loginTest</td> 
-  <td>main@517355658</td>   <td></td> </tr>
-<tr bgcolor="b0c791">  <td>22/01/26 18:38:50</td>   <td>44586</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseUtilities.tearDown()[pri:0, instance:TestSuite.LoginPageTC@47987356]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@517355658</td>   <td></td> </tr>
+<tr bgcolor="c971a1">  <td>22/01/29 13:54:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTC.continueButtonValidation()[pri:2, instance:TestSuite.LoginPageTC@49c7b90e]">continueButtonValidation</td> 
+  <td>main@769432223</td>   <td></td> </tr>
+<tr bgcolor="c971a1">  <td>22/01/29 13:54:55</td>   <td>710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTC.kill()[pri:0, instance:TestSuite.LoginPageTC@49c7b90e]">&lt;&lt;kill</td> 
+<td>&nbsp;</td>  <td>main@769432223</td>   <td></td> </tr>
+<tr bgcolor="c971a1">  <td>22/01/29 13:54:36</td>   <td>-19028</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTC.launchBrowser()[pri:0, instance:TestSuite.LoginPageTC@49c7b90e]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@769432223</td>   <td></td> </tr>
+<tr bgcolor="b0c791">  <td>22/01/29 13:54:56</td>   <td>1447</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseUtilities.tearDown()[pri:0, instance:TestSuite.LoginPageTC@49c7b90e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@769432223</td>   <td></td> </tr>
 </table>
