--- a/MakeMyTrip/test-output/old/Default suite/methods-not-run.html
+++ b/MakeMyTrip/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>TestSuite.LoginPageTC.loginTest</td></tr>
+<tr><td>TestSuite.LoginPageTC.invalidEmailValidPass</td></tr>
+<tr><td>TestSuite.LoginPageTC.validIDInvalidPass</td></tr>
+<tr><td>TestSuite.LoginPageTC.continueButtonValidation</td></tr>
 </table>
