--- a/MakeMyTrip/test-output/old/Default suite/classes.html
+++ b/MakeMyTrip/test-output/old/Default suite/classes.html
@@ -4,44 +4,28 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestSuite.LoginPageTC</td>
+<td>TestSuite.HomePageTC</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validIDInvalidPass</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>continueButtonValidation</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>invalidEmailValidPass</td>
+<td>menu</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>launchBrowser</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td align='center' colspan='3'>@AfterMethod</td>
+<td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>kill</td>
-<td>&nbsp;</td></tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
