--- a/MakeMyTrip/test-output/old/Default suite/methods.html
+++ b/MakeMyTrip/test-output/old/Default suite/methods.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="677d7f">  <td>22/01/29 15:24:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseUtilities.tearDown()[pri:0, instance:TestSuite.LoginPageTC@71def8f8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@389993238</td>   <td></td> </tr>
-<tr bgcolor="877672">  <td>22/01/29 15:24:16</td>   <td>-40282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTC.launchBrowser()[pri:0, instance:TestSuite.LoginPageTC@71def8f8]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@389993238</td>   <td></td> </tr>
-<tr bgcolor="877672">  <td>22/01/29 15:24:56</td>   <td>-209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTC.kill()[pri:0, instance:TestSuite.LoginPageTC@71def8f8]">&lt;&lt;kill</td> 
-<td>&nbsp;</td>  <td>main@389993238</td>   <td></td> </tr>
-<tr bgcolor="877672">  <td>22/01/29 15:24:31</td>   <td>-25402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTC.loginTest()[pri:1, instance:TestSuite.LoginPageTC@71def8f8]">loginTest</td> 
-  <td>main@389993238</td>   <td></td> </tr>
+<tr bgcolor="677d7f">  <td>22/01/29 17:04:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseUtilities.tearDown()[pri:0, instance:TestSuite.HomePageTC@18d87d80]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="877672">  <td>22/01/29 17:03:52</td>   <td>-24576</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTC.launchBrowser()[pri:0, instance:TestSuite.HomePageTC@18d87d80]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1833789138</td>   <td></td> </tr>
+<tr bgcolor="877672">  <td>22/01/29 17:04:17</td>   <td>-204</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTC.menu()[pri:0, instance:TestSuite.HomePageTC@18d87d80]">menu</td> 
+  <td>main@1833789138</td>   <td></td> </tr>
 </table>
