exceloperations TC modified

--- a/MakeMyTrip/test-output/old/Default suite/classes.html
+++ b/MakeMyTrip/test-output/old/Default suite/classes.html
@@ -11,7 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>menu</td>
+<td>headerMenuValidation</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>getData</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -31,6 +35,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tearDown</td>
+<td>close</td>
 <td>&nbsp;</td></tr>
 </table>
