--- a/MakeMyTrip/test-output/old/Default suite/methods.html
+++ b/MakeMyTrip/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c971a1">  <td>22/01/29 18:14:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTC.launchBrowser()[pri:0, instance:TestSuite.HomePageTC@47faa49c]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1813666644</td>   <td></td> </tr>
-<tr bgcolor="b0c791">  <td>22/01/29 18:15:22</td>   <td>68663</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseUtilities.tearDown()[pri:0, instance:TestSuite.HomePageTC@47faa49c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1813666644</td>   <td></td> </tr>
-<tr bgcolor="c971a1">  <td>22/01/29 18:15:05</td>   <td>51695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTC.menu()[pri:0, instance:TestSuite.HomePageTC@47faa49c]">menu</td> 
-  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="e5f797">  <td>22/01/29 20:58:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTC.launchBrowser()[pri:0, instance:TestSuite.HomePageTC@6cd28fa7]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1422238463</td>   <td></td> </tr>
+<tr bgcolor="e5f797">  <td>22/01/29 20:59:15</td>   <td>19283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTC.headerMenuValidation()[pri:0, instance:TestSuite.HomePageTC@6cd28fa7]">headerMenuValidation</td> 
+  <td>main@1422238463</td>   <td></td> </tr>
+<tr bgcolor="e5f797">  <td>22/01/29 20:59:34</td>   <td>38232</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTC.close()[pri:0, instance:TestSuite.HomePageTC@6cd28fa7]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1422238463</td>   <td></td> </tr>
 </table>
